# AMEDA

./: .gitignore  AMEDA_user_manual_20210601.txt  CLAUDE.md  README.md  ameda_visualization.ipynb  pyproject.toml  test_ameda.py
.claude/: settings.local.json
ameda/: eddy_centers.py  fields.py  load_fields.py  main.py  params.py  rossby.py  utils.py
notebooks/: ameda_visualization.ipynb  center_visualization.ipynb  detection_fields_visualization.ipynb
